# bootcamp-ia

./: .gitignore
01-Langchain_basico/: .env.example  .gitignore  practica_01_SL.py  practica_02_SL.py  practica_03_SL.py  practica_04_SL.py  pyproject.toml
02-rag_chains_y_runnables/: .env.example  .gitignore  practica_05_SL.py  pyproject.toml
03-advanced-chatbot/: 001-simple-chatbot.py  messages.json  practica_09_SL.py  practica_10_SL.py  practica_11_SL.py  practica_12_SL.py  practica_13_SL.py  pyproject.toml
03-advanced-chatbot/data_reviews/: data_reviews.csv
